build: plugin 6.3.5, gradle 8.0.2, standardized project names, jakarta validation (#318)
* Micronaut GRPC 4.0.0-M1
* Micronaut Multitenancy 5.0.0-M1
* Micronaut Validation 4.0.0-M2
* Micronaut Reactor 3.0.0-M1
* Micronaut Serde 2.0.0-M1
* build Micronaut Test 4.0.0-M1
* ci: GitHub Actions Sync
* disable binary compatibility
* examples micronaut 4.0.0-SNAPSHOT
* add micronaut-logging bom
* fix dependency notation in docs
* additional changes build_plugin (#319)
* small cleanup, consumerName not required, validate topics by TopicResolver instead of jakarta Pattern, fix docs consumerName
* remove example app as other mn project don't have them anymore
* japiCmp fix, and cleanup convention plugins
* revert to qualified topic names
* fix topic pattern, remove unecessary tenant check in producer advice, fix sonarCloud warrnings
* fix topic regex
* remove shutdownOnSubscribeError, fix documentation, minor refactor, test ensure bean is loaded

---------
Co-authored-by: Haris Secic <haris.secic@gmail.com>
Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>